--- a/package.json
+++ b/package.json
@@ -12,12 +12,15 @@
     "@types/react": "16.9.5",
     "@types/react-dom": "16.9.1",
     "@types/react-router-dom": "^5.1.0",
+    "@types/yup": "^0.26.24",
     "formik": "2.0",
+    "notistack": "^0.9.5",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
-    "typescript": "3.6.4"
+    "typescript": "3.6.4",
+    "yup": "^0.27.0"
   },
   "scripts": {
     "dev": "react-scripts start",
