--- a/package.json
+++ b/package.json
@@ -7,12 +7,14 @@
     "@material-ui/icons": "^4.4.3",
     "@material-ui/lab": "^4.0.0-alpha.28",
     "@react-google-maps/api": "^1.7.7",
+    "@types/big.js": "^4.0.5",
     "@types/jest": "24.0.18",
     "@types/node": "12.7.12",
     "@types/react": "16.9.5",
     "@types/react-dom": "16.9.1",
     "@types/react-router-dom": "^5.1.0",
     "@types/yup": "^0.26.24",
+    "big.js": "^5.2.2",
     "formik": "2.0",
     "notistack": "^0.9.5",
     "react": "^16.10.2",
