--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-dom": "^16.10.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
+    "react-use-dimensions": "^1.2.1",
     "typescript": "3.6.4",
     "yup": "^0.27.0"
   },
