--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
   "name": "pedidos-ya-test",
   "version": "0.1.0",
-  "private": true, 
+  "private": true,
   "dependencies": {
+    "@apollo/react-hooks": "^3.1.3",
+    "@graphql-codegen/typescript-operations": "^1.9.1",
+    "@graphql-codegen/typescript-react-apollo": "^1.9.1",
     "@material-ui/core": "^4.5.0",
     "@material-ui/icons": "^4.4.3",
     "@material-ui/lab": "^4.0.0-alpha.28",
@@ -14,8 +17,10 @@
     "@types/react-dom": "16.9.1",
     "@types/react-router-dom": "^5.1.0",
     "@types/yup": "^0.26.24",
+    "apollo-boost": "^0.4.4",
     "big.js": "^5.2.2",
     "formik": "2.0",
+    "graphql": "^14.5.8",
     "notistack": "^0.9.5",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
@@ -30,7 +35,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "setup": "node setup.js"
+    "setup": "node setup.js",
+    "codegen": "graphql-codegen"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -48,6 +54,8 @@
     ]
   },
   "devDependencies": {
+    "@graphql-codegen/cli": "^1.9.1",
+    "@graphql-codegen/typescript": "^1.9.1",
     "@testing-library/dom": "^6.8.1",
     "@testing-library/jest-dom": "^4.1.2",
     "@testing-library/react": "^9.3.0",
