--- a/package.json
+++ b/package.json
@@ -1,42 +1,30 @@
 {
-  "name": "pedidos-ya-test",
+  "name": "spymovil-test",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@apollo/react-hooks": "^3.1.3",
-    "@graphql-codegen/typescript-operations": "^1.9.1",
-    "@graphql-codegen/typescript-react-apollo": "^1.9.1",
     "@material-ui/core": "^4.5.0",
     "@material-ui/icons": "^4.4.3",
     "@material-ui/lab": "^4.0.0-alpha.28",
-    "@react-google-maps/api": "^1.7.7",
-    "@types/big.js": "^4.0.5",
     "@types/jest": "24.0.18",
     "@types/node": "12.7.12",
     "@types/react": "16.9.5",
     "@types/react-dom": "16.9.1",
     "@types/react-router-dom": "^5.1.0",
-    "@types/yup": "^0.26.24",
     "apollo-boost": "^0.4.4",
-    "big.js": "^5.2.2",
-    "formik": "2.0",
-    "graphql": "^14.5.8",
-    "notistack": "^0.9.5",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
     "react-use-dimensions": "^1.2.1",
-    "typescript": "3.6.4",
-    "yup": "^0.27.0"
+    "typescript": "3.6.4"
   },
   "scripts": {
     "dev": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "setup": "node setup.js",
-    "codegen": "graphql-codegen"
+    "setup": "node setup.js"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -54,8 +42,6 @@
     ]
   },
   "devDependencies": {
-    "@graphql-codegen/cli": "^1.9.1",
-    "@graphql-codegen/typescript": "^1.9.1",
     "@testing-library/dom": "^6.8.1",
     "@testing-library/jest-dom": "^4.1.2",
     "@testing-library/react": "^9.3.0",
