--- a/package.json
+++ b/package.json
@@ -10,13 +10,17 @@
     "@types/node": "12.7.12",
     "@types/react": "16.9.5",
     "@types/react-dom": "16.9.1",
+    "@types/react-redux": "^7.1.7",
     "@types/react-router-dom": "^5.1.0",
     "date-fns": "^2.9.0",
     "local-storage": "^2.0.0",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
+    "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
+    "redux": "^4.0.5",
+    "reselect": "^4.0.0",
     "typescript": "3.6.4",
     "use-http": "^0.2.5"
   },
