--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@date-io/date-fns": "1.x",
     "@material-ui/core": "^4.9.0",
+    "@material-ui/icons": "^4.9.1",
     "@material-ui/pickers": "^3.2.10",
     "@types/jest": "24.0.18",
     "@types/node": "12.7.12",
